Modificacion de entidades ProtoStream añado rutas necesarias para front y login/registro en front